# SpotifyAutoPlaylist

./: .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  spotify-cli-roadmap.md
docs/research/: genre-sources.md
flask-tutorial/flaskr/: __init__.py
src/spc/: __init__.py  cli.py  config.py  models.py  playlist_writer.py
src/spc/curation/: __init__.py  pipeline.py  scoring.py
src/spc/genre_intelligence/: __init__.py  profile.py
src/spc/sources/: __init__.py  lastfm.py  spotify.py
src/spc/spotify/: __init__.py  client.py
tests/spc/: test_cli.py  test_config.py  test_pipeline.py  test_scoring.py
