[project]
name = "spc"
version = "0.1.0"
description = "CLI-first Spotify playlist curation scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
spc = "spc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["spc"]
